[package]
name = "gdal-sys"
description = "Low level GDAL bindings for Rust"
license = "MIT"
version = "0.6.0"
repository = "https://github.com/georust/gdal"
authors = ["Johannes Drönner <droenner@informatik.uni-marburg.de>"]
edition = "2018"

[build-dependencies]
reqwest = { version = "0.11.10", features = ["blocking"] }
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }

[dependencies]
libc = "0.2"
